--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,10 +2,14 @@ body a{
     text-decoration: none;
 }
 
+.navbar-light {
+    background: #fff !important;
+}
+
 .sidebar-menu a,
 .sidebar-heading {
-    background-color: #1a1e21 !important;
-    color: white;
+    background-color: #F8F9FD !important;
+    color: #000000;
     padding: 16px;
 }
 
@@ -136,7 +140,6 @@ section .container .row .base:hover {
 }
 @media only screen and (max-width: 600px) {
     figure {
-
         padding: 9px 5px 4px;
         margin-bottom: 15px;
         border-radius: 5px;
@@ -144,6 +147,11 @@ section .container .row .base:hover {
         box-shadow: 0px 3px 9px -4px #7c7c7c;
     }
     figure h2 {
+        margin: auto;
         text-align: center;
+    }
+    figure nav {
+        display: none;
+        visibility: hidden;
     }
 }
