--- a/public/css/login.css
+++ b/public/css/login.css
@@ -17,6 +17,7 @@ body {
 
 .columns {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
